# MLOps-Financial-Tweets

./: .gitignore  LICENSE  Makefile  README.md  cloudbuild.yaml  data.dvc  docker-compose.yaml  fe-cloudbuild.yaml  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: codecheck.yml  model_eval.yml  tests.yml
api/: Dockerfile  main.py  requirements.txt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops_project/: __init__.py  evaluate_model.py  hydra_usage_example.py  predict_model.py  train_model.py
dtu_mlops_project/config/: train_config.yaml
dtu_mlops_project/data/: make_dataset.py
front_end/: Dockerfile  app.py
reports/: README.md
tests/: test_data.py  test_inference.py  test_training.py
tests/data/tiny_train/: data-00000-of-00001.arrow  dataset_info.json  state.json
